components/policies/development/kueue/deny-invalid-build-platforms/.chainsaw-test/chainsaw-assert-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deny-invalid-build-platforms.kueue.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
